# gimmwebservice

./: LICENSE  README.md  README2.md  WebService.Readme.txt  pyproject.toml
gimmwebservice/: Dockerfile  __main__.py  build.sh  getmyancestors.py  gimmwebservice.py  log.txt  mergemyancestors.py  requirements.txt
gimmwebservice/classes/: constants.py  descendents.py  gedcom.py  htmlpage.py  individualsheet.py  log.py  masterindex.py  pedigree.py  searchgedcom.py  session.py  surnames.py  tree.py
printVeryLargeTextPedigrees/: __init__.py  pedigreewebservice.py  printVeryLargeTextPedigrees.py
printVeryLargeTextPedigrees/classes/: gedcom.py  session.py  tree.py
