[project]
name = "gimmwebservice"
description = "Create html,txt,pdfs text of large pedigrees from FamilySearch Tree"
requires-python = ">=3.7"
license = {text = "GNU"}
keywords = [
  "gimmwebservice",
  "familysearch",
  "fstogedcom",
  "gedcom",
  "gedcom2web",
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "babelfish==0.6.0",
    "diskcache==5.2.1",
    "requests==2.25.1",
    "fake-useragent==1.1.0",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "gimmwebservice.__version__"}
readme = {file = ["README.md"]}

[project.urls]
HomePage = "https://github.com/mmgroat/gimmwebservice"

[tool.setuptools.package-data]
gimmwebservice = ["fstogedcom.png"]

[project.scripts]
gimmwebservice = "gimmwebservice.gimmwebservice:main"
mergemyancestors = "gimmwebservice.mergemyancestors:main"
fstogedcom = "gimmwebservice.fstogedcom:main"

